2007-06-26  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: SyncLockInfo class added.
	* Tomboy/FileSystemSyncServer.cs: Added code to deal with sync lock
	  files to expire them and guarantee that only one client gets in at
	  a time.
	* Tomboy/Preferences.cs: Added a SYNC_GUID so that clients can identify
	  themselves in the lock file.  By default it'll just use a
	  System.Guid, but you could go change the key in GConf and it'll
	  work.

2007-06-25  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy.mdp: Added SyncManager.cs, SyncDialog.cs,
	  FileSystemSyncServer.cs, TomboySyncClient.cs
	* Tomboy/PreferencesDialog.cs, Tomboy/SyncDialog.cs,
	  Tomboy/SyncManager.cs, Tomboy/Preferences.cs, Tomboy/Makefile.am,
	  Tomboy/TomboySyncClient.cs: Initial sync code from Sandy Armstrong.
	* Tomboy/FileSystemSyncServer.cs: Initial sync code from Sandy
	  Armstrong.  Deal with lock file expiration also.
	* Tomboy/NoteWindow.cs: Initial sync code from Sandy Armstrong.  Add a
	  temporary "Synchronize Notes" menu item to the Tools menu.
	* Tomboy/Note.cs: Initial sync code from Sandy Armstrong.  Add revision
	  support.

2007-06-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Plugins/ExportToHTML.xsl: Change HTML export link/title colors
	  to match new note link/title colors.  Fixes bug #449597 (patch
	  courtesy of Stefan Schweizer).

2007-06-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/RecentChanges.cs: Removing unused Gtk.HPaned.

2007-06-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/*, Tomboy/Mono.Addins/*: svn:ignore love.

2007-06-11  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/Tasks/TaskListWindow.cs: Set the minimum width to 200
	  pixels and ellipsize the task summary.

2007-06-08  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/Tasks/TasksNoteAddin.cs: Added code to watch when a
	  newline is pressed so that a task/todo list can be continued or
	  ended depending on the previous line.